apps/my-service/base/mysql-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: my-service-mysql
  namespace: my-service
  labels:
    app.kubernetes.io/name: my-service
    app.kubernetes.io/component: mysql
spec:
  clusterIP: None
  selector:
    app.kubernetes.io/name: my-service
    app.kubernetes.io/component: mysql
  ports:
    - name: mysql
      port: 3306
      targetPort: mysql
