apps/my-service/base/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: my-service
  namespace: my-service
  labels:
    app.kubernetes.io/name: my-service
    app.kubernetes.io/instance: my-service
    app.kubernetes.io/component: web
spec:
  type: ClusterIP
  selector:
    app.kubernetes.io/name: my-service
    app.kubernetes.io/component: web
  ports:
    - name: http
      port: 80
      targetPort: http
