apps/my-service/base/networkpolicy-default-deny.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: default-deny
  namespace: my-service
spec:
  podSelector: {}
  policyTypes:
    - Ingress
    - Egress
